SFI summerschoo: version avant calcotada!

--- a/doc/administrative_doc/2016SantaFeSummerSchool/20160122_research_interest.tex
+++ b/doc/administrative_doc/2016SantaFeSummerSchool/20160122_research_interest.tex
@@ -1,7 +1,7 @@
-\documentclass[10pt]{paper}   
+\documentclass[10pt]{article}   
 \usepackage{fontspec} 
 
-%\setmainfont{Linux Libertine}
+\setmainfont{ebgaramond}
 
 \usepackage[scale=0.75]{geometry}
 
@@ -16,33 +16,33 @@
 \maketitle
 
 
-Throughout my studies, from the very beginning of my time at the university continuing through to my actual PhD, I always managed to follow an interdisciplinary path, mixing computer sciences with evolutionary biology, cognitive sciences, philosophy of science and during the last year, history, economic and archeology.
+\textbf{Throughout} my studies, from the very beginning of my time at the university continuing through to my actual PhD, I always managed to follow an interdisciplinary path, mixing computer sciences with evolutionary biology, cognitive sciences, philosophy of science and during the last year, history, economic and archeology.
 
-This interest to multi-disciplinary came back from before entering the university. When young, I was so impressed by the ability of numeric artifacts built by humans to exhibit ‘life-like’ or ‘human-like’ behaviors, and by those 'natural' behaviors that seemed so complex and well adapted. Observing that I quickly became determined to find a way to understand both entities: the living world in the nature, and its artificial counterpart. Since then all the courses I chose, all the schools I decided to attended, and all other choices I made were in pursuit of obtaining a better understanding of life as well as computers, and the link between them. 
-With new knowledge, this general interest quickly evolve into concrete research inquiry : to explore the links between human production (language, social organization,art, computer model…) and natural systems driven by Darwinian evolution. How they seems sometimes so similar? Why we can sometimes use artificial tools to understand natural systems, or use natural  systems to build artificial tools? how those systems can, based on simple rule, diversify, adapt, evolve and change their environment as well as they change themselves? 
+This interest in multi-disciplinarity start long before entering the university, when young I look this amazing ability of numeric artifacts built by humans to exhibit ‘life-like’ or ‘human-like’ behaviors, and those incredible ‘natural' behaviors, so complex and well adapted. I quickly became determined to find a way to understand both entities: the living ones and their artificial counterparts. Since then all the courses I chose, all the schools I decided to attended, and all other choices I made were in pursuit of obtaining a better understanding it.
 
-I did a first Master Degree in Natural \& Artificial Cognition, in which I wrote a thesis where I study the evolution of specialization process in swarm of autonomous agent trying to link it with biological process of speciation \& specialization.
+As I started to gather knowledge, this genuine inquiry quickly evolved into a concrete research quest: I wanted to understand what were the links between human production (language, social organization, computer program) and natural systems driven by Darwinian evolution. How they seem sometimes so similar? Why we can use artificial tools to understand the complexity of natural systems and why we can use the highly adapted design of natural systems to refine our artificial tools? How such systems can, based on simple rule and without supervision, diversify, adapt, change their environment as well as they change themselves? 
 
-
-But there I understood that I would need more than scientific knowledge to deeply understand the link between the process I want to explain and the tools I used to do it. And if I want myself to be able to produced meaningful, useful and concrete research projects I would need a really deep understanding of such a link. That's why I decided to engage myself in another Master Degree in History and Philosophy of Science where I focused on evolutionary processes and their study using computer sciences. It allows me to dig deeper in the philosophical debates that occur throughout the history of evolutionary and to learn the history of the building of the field itself since Darwin.
+To answer those questions I did a first Master Degree in Natural \& Artificial Cognition in which my thesis focused on the study of the evolution of distribution of labor in swarm of autonomous agents. The main idea was to explore what are the properties of the reproductive network that permit the emergence of division of labor. We are finished the anlysis of this work which will soon be published. In parallel I studied the same kind of mechanisms but in simulated ‘cognitive’ agents designed with psychologists. The idea here was to explore what environmental conditions allow subpopulation of cooperative agents to co-exist with populations of selfish individual. This work has been published few months ago \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
 
 
+In both case the results I found were valuable as themselves for me and provided a new understanding about crucial evolutionary processes in totally different contexts. But to convince people that this knowledge could be applied to real world entities and that it was valuable for the understanding of the world in general was not as straightforward. I realize that if I wanted myself to be able to produce meaningful, useful and concrete research projects and moreover if I wanted to be able to make the link between such projects and what more ‘traditional’ scientists were doing, I would need a deep understanding of the tool I use, the subject I study object, and the link between them. 
 
-Obviously all that was leaded by a lot of reading closely realted and strongly influced by the research done in the santa Fe isntitute. 
+That decided me to engage myself in another Master Degree in History and Philosophy of Science. My work then focused on exploring what are evolutionary processes and how we can study them using computers. It allowed me to learn precisely the history and the building of Evolutionary Biology since Darwin and to dig deeper in the philosophical debates that occur throughout this history. I took also this opportunity to diversify the nature of the systems I wanted to study: I created the LaReMI Junior lab (http://en.laremi.net/), financially supported by the Ecole Normal Superieur (Lyon France) with the idea of applying similar approach (simulation coupled with simple cognitive experiments) to study the evolution of music melodies. It was my first contact with what is called ‘cultural evolution’, but moreover allow us to organized an international workshop about the topic in Lyon (http://en.laremi.net/actvity/meeting\footnote{Regarding to the auto-hosting solution we adopt for our server, the loading of those pages could take time}) and to present our approach to the community in Lisbon \cite{carrignon2013whyapply}.
 
-This curriculum lead me to focus on trying to understand how systems made of huge number of entities (homogeneous or not), highly decentralized and unsupervised, can evolved powerful adaptive properties such as division of labor, specialization and learning.
+After those two complementary Masters, I pursued the exploration of such questions in the scope of my actual PhD. The idea here is still to use simulation to try to understand the conditions of evolution of particular dynamics in a more or less decentralized system. But this time I choose to study the evolution of cultural and economic network during the Roman Empire. An historical question about a human activity in a project \footnote{ERC grant EPNET: www.roman-ep.net} involving historians, archaeologists as well as database specialists. My work focus on trying to understand the conditions of emergence of a decentralized market. The idea is to give tools to measure if such conditions were present during the Roman period and if not, what kind of economy we should expect to find. To do so I developed a simple cultural evolution simulation where cultural transmission mechanisms lead to economical changes, that in turn modify the cultural dynamics. I am exploring what kind of properties the cultural network need to exhibit in order that a stable decentralized economy evolved and I already presented the computational framework at the Winter Simulation Conference \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} and will present in Oslo \cite{carrignon2016coevolutionofcultureandtradeimpactofculturalnetworktopologyoneconomicdynamics} the first results we have with networks.
 
-I explore such evolution in simulated agents , during the first part of a first but also in simulated robots we obtained funding to look if such dynamics where observable in evolution of musics (Junior Lab LAREMI, ENS Lyon, France)
-
-I am actually doing such a work in my PhD, which aim to understand the evolution of cultural and economic network during the Roman Empire. 
-I already followed this approach to study human interactions, the evolution of speciation in swarm of simulated agents [1], the evolution of progress in cellular automata [4] or even the transmission of musical melodies between human[2]. I am now using all this baggage to study the nature of the economy in past societies, and more precisely in the Roman Empire [3] which is the subject of my PhD. 
-
-My approach to do so is strongly grounded into the theory of evolution and combine computer modelization with complex system analysis: by going back and forth from the analysis of the real world data, the model building activity and the analysis of the data obtain by simulation, I try to understand what are the central mechanisms that lead such complex systems and how they allow them to exhibit interesting properties. 
-
-In parallel to this scientific activity, I develop a deep concern about the epistemological relevance of what I am doing. Computer Simulation and Complex Systems Analysis are powerful tools but they could quickly mislead the research and bring the researcher to nonsense and useless explorations. In that regard I try to always have a strong conceptual and high level understanding of the problem and the methods at sake, as it is the best way to guarantee quick, good and meaningful results. Moreover, the questions raised by such approach quickly go behind the simple empiric inquisition and require skills that allow to rethink and redefine all the traditional epistemic baggage into framework far from the ones scientists are use to work in.
+ Those past 4 years and my actual research project can be summarized as the exploration of how systems made up of huge number of entities (homogeneous or not), highly decentralized and mostly unsupervised, can evolved powerful adaptive properties such as division of labor, cooperation, specialization and learning. And thanks to my master in Philosophy of Science I also developed in parallel to my scientific activity a deep concern about the epistemological relevance of what I am doing. Computer Simulation and Complex Systems Analysis are powerful tools but they could quickly mislead the research and bring the researcher to nonsense and useless explorations. Moreover, the questions raised by such approach quickly go behind the simple empiric inquisition and require skills that allow to rethink and redefine the traditional epistemic baggage into framework far from the ones scientists are use to work in.
 
 
-Nonetheless, in every project I worked I saw how mature start to get such approach and how the understand of decentralized and unsupervised evolving system \emph{per se} was providing knowledge in a wide range of different area of research. It is no more a curious . People using computational tool quantittaive methode and simulation \emph{are} help biologist, sociologist and now, historians. And every time new coop are done, and both side are learnign to understand each other, those interaction are going  to be more and more successful. It's an amaizingly exiting fields.meme si c'est peine perdu si il n'y a pas de departement de gens qui font de strucs bizarre et si les financement se font rare, je continuerait dans cette direction car elle fonctionne et qu'elle est passionnante.  Dans les ann;es suivante mon doctorat j'espere pouvoir approfondir encore l'articulation modelisation/données  et aller en profondeur dans d áutre facette en mettant l'acent sur la necessité d'avoir des donnés.  K'aimerais nottameent learning and development what are their role in such system? how they transform the dynamics.
+In every projects I was I saw how mature such approach is getting. Trying to understand decentralized and unsupervised evolving system \emph{per se} is providing knowledge in a wide range of different area. It is not anymore a marginal object of distraction. With new generation of physicists, biologists, sociologists, economists and even historians able to truly understand such methods, concrete hypotheses are formulated and can be tested. With computer and program always more powerful, and with scientist like me with a strong transdisciplinary background able to use those tools and to make the link between the questions, the methods and the results, new discovery can be made about topic that were even unthinkable before. 
 
 
+This gives us an amazingly exciting and wide open area of research where a lot remains to do.  I will continue to explore it. Among other things, I will continue to explore the properties of the networks that allow the emergence of particular properties (such as cooperation, division of labor, specialization\ldots) but I want to go farther and study: how such network can themselves evolve? Another huge track of research I want to pursue is to study in what extend the evolution of those properties depend on the abilities of the system to interact with its environment (using developmental mechanism, simple learning, cultural transmission,\ldots). 
+
+In both case I want first of all to tighten again the link between what I am doing, the empirical data and the scientists working to try to extract meanings from those data. To do so I will to continue to find and work with people from different field but with concrete, real and complex case study. Because I think that the most valuable and beautiful striking knowledge don't lie in computational simulation we can do or in the mathematical model we extract from it, neither in the simple analysis of the raw data and the description of such analysis, but emerge from the well articulation of both side.
+
+
+
+\bibliographystyle{abbrv}
+\bibliography{../../biblio/bib/SimonCarrignon.bib}                   
 \end{document}
