--- a/doc/conferences/20160329_CAA/201510_AbstractCAA.tex
+++ b/doc/conferences/20160329_CAA/201510_AbstractCAA.tex
@@ -9,17 +9,13 @@
 
 Trace of the economic activity in the archaeological record are scarce which make the understanding of past economy difficult. Nowaday economic studies could bring new tools and models that could help to fill that gap, however such models badly incorporate cultural aspect of past society.
 
-In this study we want to mix those approaches by mixing cultural and economical model to look at how the local cultural environment of individuals in a society could influence the global dynamics of the economy of this society.
+This thesis mix cultural and economical model to look at how the local cultural environment of individuals in a society could influence the global dynamics of the economy of this society.
 
 To do so we use a trade model that has been shown to converge to an optimal market without central authority. In this model, individual have to trade a good they produce in order to get other goods they need, and can change their trading strategies by imitating the strategy of the most successful individuals. 
 
-In this previous model the cultural environment of the individual was made of every other agents in the system,  i.e. all agents were able to know the success of all the other agents and imitate anyone of them. With this imitation mechanism and the simple trade system, all were quickly able to exchange the good they produce in a way that allows us to get the other goods, without the need of a central coordination. 
-
 In the current paper we want to study in what extend the capacity of this model to converge to an optimal and decentralized market depends on the properties of the cultural network of the individuals. To do so we change the cultural environment of the agents by creating a wide variety of different typologies of networks with different properties leading to different cultural environment. For each cultural environment, we then run simulations and observe and measure the properties of the resulting economic dynamics. 
 
-We thus aim to model the coevolution of both components (cultural and economic) and how different trade networks (based on knowledge of the Roman Empire) affect their dynamics.
-
-In coming study we hope to fruitfully apply this approach to evaluate the probability that this kind of economy evolved during the Roman Empire, using trade network reconstructed via Archaeological and Historical evidence. 
+We aim to model the coevolution of both components (cultural and economic) and to caracterize how different trade networks (based on knowledge of the Roman Empire) affect their dynamics. We hope to fruitfully apply this approach to evaluate the probability that such of economy evolved during the Roman Empire, using trade network reconstructed via Archaeological and Historical evidences.
 
 \end{document}
 
