update my bibliogrpahy

--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -49,15 +49,25 @@
 }
 
 @inproceedings{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties,
-    author= "Simon Carrignon and Jean-Marc Montanier and Xavier Rubio-Campillo",
-    abstract = "This paper presents a new framework to study the co-evolution of cultural change and trade. The design aims for a trade-off between the flexibility necessary for the implementation of multiple models and the structure necessary for the comparison between the models implemented. To create this framework we propose an Agent-Based Model relying on agents producing, exchanging and associating values to a list of goods. We present the key concepts of the framework and two examples of its implementation which allow us to show the flexibility of our framework. Moreover, we compare the results obtained by the two models, thus validating the structure of the framework. Finally, we validate the implementation of a trading model by studying the price structure it produces.",
-    booktitle = "{2015 Winter Simulation Conference}",
-    title = "{Modeling the Co-evolution of Trade and Culture in Past Societies}",
-    language = "English",
-    pages="3949--3960",
-    address = {Huntington Beach, United States},
-    editor = {L. Yilmaz and M.K.V. Chan and I. Moon and T. M. K. Roeder and C. Macal and M. Rossetti},
-    month=Dec,
-    year=2015
+	abstract = "This paper presents a new framework to study the co-evolution of cultural change and trade. The design aims for a trade-off between the flexibility necessary for the implementation of multiple models and the structure necessary for the comparison between the models implemented. To create this framework we propose an Agent-Based Model relying on agents producing, exchanging and associating values to a list of goods. We present the key concepts of the framework and two examples of its implementation which allow us to show the flexibility of our framework. Moreover, we compare the results obtained by the two models, thus validating the structure of the framework. Finally, we validate the implementation of a trading model by studying the price structure it produces.",
+	address = "Huntington Beach, United States",
+	author = "Carrignon, Simon and Montanier, Jean-Marc and Rubio-Campillo, Xavier",
+	booktitle = "{2015 Winter Simulation Conference}",
+	editor = "Yilmaz, L. and Chan, M.K.V. and Moon, I. and Roeder, T. M. K. and Macal, C. and Rossetti, M.",
+	language = "English",
+	month = dec,
+	pages = "3949--3960",
+	title = "{Modeling the Co-evolution of Trade and Culture in Past Societies}",
+	year = 2015
+}
+
+@inproceedings{carrignon2016coevolutionofcultureandtradeimpactofculturalnetworktopologyoneconomicdynamics,
+	author = "Carrignon, Simon and Montanier, Jean-Marc and Michaud, Jerome and Rubio-Campillo, Xavier",
+	booktitle = "{44th Computer Applications and Quantitative Methods in Archaeology Conference (CAA 2016) }",
+	location = "Oslo (Norway)",
+	month = "Avril",
+	title = "{Co-evolution of culture and trade : impact of
+cultural network topology on economic dynamics}",
+	year = "2016"
 }
 
