--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -66,8 +66,16 @@
 	booktitle = "{44th Computer Applications and Quantitative Methods in Archaeology Conference (CAA 2016) }",
 	location = "Oslo (Norway)",
 	month = "Avril",
-	title = "{Co-evolution of culture and trade : impact of
-cultural network topology on economic dynamics}",
+	title = "{Co-evolution of culture and trade : impact of cultural network topology on economic dynamics}",
+	year = "2016"
+}
+
+@proceedings{morer2016influenceofthetopologyofculturalnetworksontheequilibriumofanexchangebasedeconomy,
+	author = "Morer, Ignacio and Carrignon, Simon and Rubio-Campillo, Xavier",
+	booktitle = "{7th Workshop on Complex Networks (CompleNet 2016) }",
+	location = "Dijon (France)",
+	month = "Avril",
+	title = "{Influence of the topology of cultural networks on the equilibrium of an exchange-based economy}",
 	year = "2016"
 }
 
