ref for HETCA attention au mergegit add bib/phd.bib !

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1348,3 +1348,19 @@
 	volume = "21"
 }
 
+@article{muller2007evodevoextendingtheevolutionarysynthesis,
+	author = "B., Muller Gerd",
+	issn = "1471-0056",
+	journal = "Nat Rev Genet",
+	localfile = "../pdfs/muller2007evodevoextendingtheevolutionarysynthesis.pdf",
+	month = "dec",
+	note = "10.1038/nrg2219",
+	number = "12",
+	pages = "943--949",
+	publisher = "Nature Publishing Group",
+	risfield_0_m3 = "10.1038/nrg2219",
+	title = "{Evo-devo: extending the evolutionary synthesis}",
+	volume = "8",
+	year = "2007"
+}
+
